--- a/package.json
+++ b/package.json
@@ -10,10 +10,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-masked-view/masked-view": "^0.3.2",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/stack": "^7.1.1",
+    "axios": "^1.7.9",
     "react": "18.3.1",
     "react-native": "0.77.0",
     "react-native-country-picker-modal": "^2.0.0",
+    "react-native-gesture-handler": "^2.22.1",
     "react-native-phone-number-input": "^2.1.0",
+    "react-native-safe-area-context": "^5.2.0",
+    "react-native-screens": "^4.6.0",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
