--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.1",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
     "axios": "^1.7.9",
     "react": "18.3.1",
     "react-native": "0.77.0",
+    "react-native-config": "^1.5.5",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-gesture-handler": "^2.22.1",
     "react-native-phone-number-input": "^2.1.0",
@@ -30,7 +32,7 @@
     "@react-native-community/cli": "15.0.1",
     "@react-native-community/cli-platform-android": "15.0.1",
     "@react-native-community/cli-platform-ios": "15.0.1",
-    "@react-native/babel-preset": "0.77.0",
+    "@react-native/babel-preset": "^0.77.0",
     "@react-native/eslint-config": "0.77.0",
     "@react-native/metro-config": "0.77.0",
     "@react-native/typescript-config": "0.77.0",
@@ -39,7 +41,9 @@
     "@types/react-test-renderer": "^18.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "2.8.8",
+    "react-native-dotenv": "^3.4.9",
     "react-test-renderer": "18.3.1",
     "typescript": "5.0.4"
   },
